<resources>
    <string name="app_name">Product Management Application</string>
    <string name="activitySelectorText">Please make a selection: </string>
    <string name="receivingStocks_btn">Receiving Stocks</string>
    <string name="orderingStocks_btn">Ordering Stocks</string>
    <string name="outputViewHeader">PRODUCT DATABASE</string>
    <string name="receiveStockViewHeader">RECEIVE STOCK</string>
    <string name="updateStockViewHeader">UPDATE STOCK</string>
    <string name="receiveStockSelectProduct">Please select a product: </string>
    <string name="receiveStockSelectQuantity">Please enter the quantity received: </string>
    <string name="receiveStockSelectQuantityButton">Update Stocks</string>
    <string name="currentProductDetails">Selected Product Details: </string>


    <string name="orderingStocksHeader">Order Stocks</string>
    <string name="orderButton">Make Order</string>
    <string name="orderStockSelectQuantity">Please enter the amount to order: </string>

</resources>